# MightyGeneratorPython

./: .gitignore  BL_Frame_Square.ppm  ConsoleCatalog.py  Main.py  README.md  buildozer.spec  credits  image_arme.py  macro.py  main.py  postscript_image_arme.py  requirements.txt
.pylint.d/: Main1.stats
Utils/: Debug.py
generator/: cookie_edgelord.py
generators/: Savage_Border_Loot.py  cookie_edgelord.py
generators/Davidland/: Armes.py
generators/SotDL/: pj.py  pnj.py
generators/borderlands/: gen_david_weapon.py  gen_savage_border_loot.py  gui_bl_kivytest.py  guitest.kv  items.py  itemskivy.py  names.py  ponderation.py  properties.py
generators/cyberpunk/: biographie_v2.py  gen_biographie_v2.py
generators/david_land/: armes.py  capacite.py  nom.py  ponderation.py
generators/misc/: gen_cookie_edgelord.py
generators/monster_hunter/: gen_terrain_colonisation.py  gen_terrain_geography.py  gen_terrain_population.py  terrain.py
generators/pathfinder/: faible.py  gen_loot_faible.py  gen_loot_intermediaire.py  gen_loot_puissant.py  intermediaire.py  puissant.py
generators/pathfinder_obj/: faible.py  intermediary.py
gui/: app.py
imagenerator/: image_arme.py
macro/: calc.py  dice.py  dice_macro.py  grammar.py  math.py  parsetab.py
utils/: debug.py  exemples.py
wordgenerator/: AbsGeneratorNode.py  DictionaryNode.py  GenerationResult.py  Generator.py  Interval.py  LICENSE.txt  NodeCollectionIf.py  NodeIf.py  Output.py  Print.py  README.md  Sequence.py  TabNode.py  UML.mdj  Variable.py  Weight.py  intervalmap.py  pyproject.toml  weightmap.py
(+12 files in other folders)
